# SparseData-AI-Precipitation-Forecasting

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROGRESS.md  PROJECT_PLAN.md  README.md  Research.docx  database.py  db_sync.md  docker-compose.yml  docker_workflow.md  documentation.md  pyproject.toml  reasearch.md  requirements.txt  sparsedata_timeline.md  tailwind.config.js
.github/workflows/: docker-publish.yml
database/: init.sql
models/single_point/: xgb_t+1.json  xgb_t+12.json  xgb_t+3.json  xgb_t+6.json
models/spatial_interpolation/: xgb_rain.json  xgb_rh.json  xgb_td.json  xgb_tdmax.json  xgb_tdmin.json  xgb_u_vec.json  xgb_v_vec.json  xgb_ws.json
scripts/: pull_db.sh  push_db.sh
src/: clean_data.py  fetch_ims_data.py  ingest_data.py  test.ipynb
src/scripts/: init_db.py
src/weather_engine/: api.py  cache.py  cell_forecasting.py  cell_full_pipeline.py  cell_generation.py  cell_inference.py  cell_interpolation.py  clean_data.py  curr_goals.md  data_analysis_full_pipeline.ipynb  data_inspection.ipynb  database.py  demo.ipynb  demo_snapshot.py  export_cold_start.py  fetch_ims_data.py  folium_map.py  full_pipeline_analysis.ipynb  inference_pipeline.py  ingest_data.py  interpolate_and_forecast.py  llocv.py  map_builder.py  rfsi.ipynb  single_point_features.py  single_point_forecast.ipynb  spatial.py  spatial_interpolation.ipynb  train_rfsi.py  update_station_metadata.py  utils.py
src/weather_engine/cold_start/: cell_neighbors.json  station_metadata.json
src/weather_engine/demo_snapshot/: build_demo_map.py  demo_snapshot.json
src/weather_engine/templates/: about.html  index.html  map_section.html  predict.html
static/: input.css  tailwind.css
tests/: test_cell_pipeline.py  test_data_integrity.py  test_deployment.py  test_feature_engineering.py  test_llocv.py  test_smoke.py  test_spatial_logic.py
tests/outputs/: single_point_truth.json
